--- a/package.json
+++ b/package.json
@@ -30,13 +30,13 @@
     "typescript": "^5.9.0"
   },
   "keywords": ["githat", "nextjs", "react", "vite", "create-app", "cli", "auth", "identity", "mcp", "ai-agents"],
-  "license": "MIT",
+  "license": "SEE LICENSE IN LICENSE",
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/GitHat-IO/create-githat-app"
+    "url": "git+https://github.com/GitHat-IO/create-githat-app.git"
   }
 }
